--- a/.github/workflows/predict_deploy_heal.yml
+++ b/.github/workflows/predict_deploy_heal.yml
@@ -15,15 +15,12 @@ env:
   EKS_CLUSTER_NAME:   ${{ secrets.EKS_CLUSTER_NAME }}
   EKS_NAMESPACE:      prod
 
-  # ECR repos (two separate)
   BACKEND_REPO:        myapp
   FRONTEND_REPO:       ai-devops-frontend
 
-  # Prometheus service
   PROM_NAMESPACE:      monitoring
   PROM_SERVICE_NAME:   prometheus-operated
 
-  # K8s naming (must match your manifests)
   BACKEND_DEPLOY:      backend
   BACKEND_CONTAINER:   backend
   BACKEND_SERVICE:     backend
@@ -33,7 +30,6 @@ env:
 
   RISK_THRESHOLD:      "0.70"
 
-  # Labels for PromQL selector
   SELECTOR_LABEL:      app
   SELECTOR_VALUE:      backend
 
@@ -156,8 +152,8 @@ jobs:
       - name: Predict from runtime metrics
         id: predict
         env:
-          NS:      ${{ env.EKS_NAMESPACE }}
-          PROM_NS: ${{ env.PROM_NAMESPACE }}
+          NS:       ${{ env.EKS_NAMESPACE }}
+          PROM_NS:  ${{ env.PROM_NAMESPACE }}
           PROM_SVC: ${{ env.PROM_SERVICE_NAME }}
           THRESHOLD: ${{ env.RISK_THRESHOLD }}
           SEL_LABEL: ${{ env.SELECTOR_LABEL }}
@@ -175,62 +171,70 @@ jobs:
           py() { python3 - "$@"; }
 
           FEATURES=$(py <<'PY'
-          import json,requests,os
-          ns=os.getenv("NS")
-          label=os.getenv("SEL_LABEL","app")
-          val=os.getenv("SEL_VALUE","backend")
-          url="http://127.0.0.1:9090/api/v1/query"
+          import json, requests, os
+          ns = os.getenv("NS")
+          label = os.getenv("SEL_LABEL", "app")
+          val = os.getenv("SEL_VALUE", "backend")
+          threshold = float(os.getenv("THRESHOLD", "0.70"))
+          url = "http://127.0.0.1:9090/api/v1/query"
 
-          def q(e):
-              r=requests.get(url,params={'query':e},timeout=15)
+          def q(expr):
+              r = requests.get(url, params={"query": expr}, timeout=15)
               r.raise_for_status()
               return r.json()
 
           def val_of(js, default=0.0):
               try:
-                  return float(js['data']['result'][0]['value'][1])
+                  return float(js["data"]["result"][0]["value"][1])
               except Exception:
                   return default
 
-          lbl = "label_" + label.replace('.', '_').replace('/', '_')
-          L = f'kube_pod_labels{{namespace="{ns}", {lbl}="{val}"}}'
+          # Try pod-level label join first
+          lbl = "label_" + label.replace(".", "_").replace("/", "_")
+          pod_label_query = f'kube_pod_labels{{namespace="{ns}", {lbl}="{val}"}}'
+          pod_labels = q(pod_label_query)
+          use_pod_join = len(pod_labels.get("data", {}).get("result", [])) > 0
 
-          def sum_on_pod(expr):
-              return f'sum(({expr}) * on (namespace,pod) group_left({lbl}) ({L}))'
+          if use_pod_join:
+              L = f'kube_pod_labels{{namespace="{ns}", {lbl}="{val}"}}'
+              def sum_on_pod(expr):
+                  return f'sum(({expr}) * on(namespace,pod) group_left({lbl}) ({L}))'
 
-          cpu = val_of(q(sum_on_pod(f'rate(container_cpu_usage_seconds_total{{namespace="{ns}",container!="POD",image!=""}}[2m])'))) * 100
-          mem = val_of(q(sum_on_pod(f'container_memory_working_set_bytes{{namespace="{ns}",container!="POD",image!=""}}')))
-          net = val_of(q(sum_on_pod(f'rate(container_network_receive_bytes_total{{namespace="{ns}",pod!=""}}[2m])')))
-          restarts = val_of(q(sum_on_pod(f'increase(kube_pod_container_status_restarts_total{{namespace="{ns}"}}[5m])')))
+              cpu = val_of(q(sum_on_pod(f'rate(container_cpu_usage_seconds_total{{namespace="{ns}",container!="POD",image!=""}}[2m])'))) * 100
+              mem = val_of(q(sum_on_pod(f'container_memory_working_set_bytes{{namespace="{ns}",container!="POD",image!=""}}')))
+              net = val_of(q(sum_on_pod(f'rate(container_network_receive_bytes_total{{namespace="{ns}",pod!=""}}[2m])')))
+              restarts = val_of(q(sum_on_pod(f'increase(kube_pod_container_status_restarts_total{{namespace="{ns}"}}[5m])')))
+              dep_lbl_sum = f'sum by (namespace, deployment, {lbl}) (kube_deployment_labels{{namespace="{ns}", {lbl}="{val}"}})'
+              desired = val_of(q(f'sum(kube_deployment_spec_replicas{{namespace="{ns}"}} * on(namespace, deployment) group_left({lbl}) ({dep_lbl_sum}))'))
+              ready = val_of(q(f'sum(kube_deployment_status_ready_replicas{{namespace="{ns}"}} * on(namespace, deployment) group_left({lbl}) ({dep_lbl_sum}))'))
+              unavail = val_of(q(f'sum(kube_deployment_status_replicas_unavailable{{namespace="{ns}"}} * on(namespace, deployment) group_left({lbl}) ({dep_lbl_sum}))'))
+              ratio = (ready / desired) if desired > 0 else 1.0
+          else:
+              # Fallback: deployment-level available/desired
+              cpu = mem = net = restarts = 0.0
+              desired = val_of(q(f'kube_deployment_spec_replicas{{namespace="{ns}",deployment="backend"}}'))
+              available = val_of(q(f'kube_deployment_status_replicas_available{{namespace="{ns}",deployment="backend"}}'))
+              ratio = (available / desired) if desired > 0 else 1.0
+              unavail = max(0.0, desired - available)
 
-          dep_lbl_sum = f'sum by (namespace, deployment, {lbl}) (kube_deployment_labels{{namespace="{ns}", {lbl}="{val}"}})'
-          desired = val_of(q(f'sum(kube_deployment_spec_replicas{{namespace="{ns}"}} * on (namespace, deployment) group_left({lbl}) ({dep_lbl_sum}))'))
-          ready   = val_of(q(f'sum(kube_deployment_status_ready_replicas{{namespace="{ns}"}} * on (namespace, deployment) group_left({lbl}) ({dep_lbl_sum}))'))
-          unavail = val_of(q(f'sum(kube_deployment_status_replicas_unavailable{{namespace="{ns}"}} * on (namespace, deployment) group_left({lbl}) ({dep_lbl_sum}))'))
-          ratio = (ready/desired) if desired>0 else 1.0
-
+          # HTTP 5xx fraction fallback
           http5xx = 0.0
-          for num,den in [
-            ('http_requests_total{code=~"5.."}','http_requests_total'),
-            ('flask_http_request_total{status=~"5.."}','flask_http_request_total'),
-          ]:
-              try:
-                  n = val_of(q(sum_on_pod(f'rate({num}[2m])')))
-                  d = val_of(q('clamp_min('+sum_on_pod(f'rate({den}[2m])')+', 1)'))
-                  if d>0 and n/d>0:
-                      http5xx = n/d
-                      break
-              except Exception:
-                  pass
+          try:
+              n = val_of(q('rate(http_requests_total{code=~"5.."}[2m])'))
+              d = val_of(q('clamp_min(rate(http_requests_total[2m]),1)'))
+              if d > 0:
+                  http5xx = n / d
+          except Exception:
+              pass
 
-          feats={
-            "restart_count_last_5m": restarts,
-            "cpu_usage_pct": cpu,
-            "memory_usage_bytes": mem,
-            "ready_replica_ratio": round(ratio,4),
-            "unavailable_replicas": unavail,
-            "network_receive_bytes_per_s": net,
-            "http_5xx_error_rate": http5xx
+          feats = {
+              "restart_count_last_5m": restarts,
+              "cpu_usage_pct": cpu,
+              "memory_usage_bytes": mem,
+              "ready_replica_ratio": round(ratio, 4),
+              "unavailable_replicas": unavail,
+              "network_receive_bytes_per_s": net,
+              "http_5xx_error_rate": http5xx,
           }
           print(json.dumps(feats))
           PY
@@ -307,12 +311,13 @@ jobs:
 
           cpu = val_of(q(sum_on_pod(f'rate(container_cpu_usage_seconds_total{{namespace="{ns}",container!="POD",image!=""}}[2m])'))) * 100
           mem = val_of(q(sum_on_pod(f'container_memory_working_set_bytes{{namespace="{ns}",container!="POD",image!=""}}')))
+
           net = val_of(q(sum_on_pod(f'rate(container_network_receive_bytes_total{{namespace="{ns}",pod!=""}}[2m])')))
           restarts = val_of(q(sum_on_pod(f'increase(kube_pod_container_status_restarts_total{{namespace="{ns}"}}[5m])')))
 
           dep_lbl_sum = f'sum by (namespace, deployment, {lbl}) (kube_deployment_labels{{namespace="{ns}", {lbl}="{val}"}})'
           desired = val_of(q(f'sum(kube_deployment_spec_replicas{{namespace="{ns}"}} * on (namespace, deployment) group_left({lbl}) ({dep_lbl_sum}))'))
-          ready   = val_of(q(f'sum(kube_deployment_status_ready_replicas{{namespace="{ns}"}} * on (namespace, deployment) group_left({lbl}) ({dep_lbl_sum}))'))
+          ready = val_of(q(f'sum(kube_deployment_status_ready_replicas{{namespace="{ns}"}} * on (namespace, deployment) group_left({lbl}) ({dep_lbl_sum}))'))
           unavail = val_of(q(f'sum(kube_deployment_status_replicas_unavailable{{namespace="{ns}"}} * on (namespace, deployment) group_left({lbl}) ({dep_lbl_sum}))'))
           ratio = (ready/desired) if desired>0 else 1.0
 
