--- a/kubernetes/ci-rbac-secrets.yaml
+++ b/kubernetes/ci-rbac-secrets.yaml
@@ -1,22 +1,23 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: ci-helm-secrets
+  name: gha-monitoring-secrets
   namespace: monitoring
 rules:
-  - apiGroups: [""]
-    resources: ["secrets"]
-    verbs: ["get","list","watch","create","update","patch","delete"]
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["get","list","watch","create","update","patch","delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: ci-helm-secrets
+  name: gha-monitoring-secrets-rb
   namespace: monitoring
 subjects:
-  - kind: User
-    name: "arn:aws:iam::123456789012:role/gha-role"
+- kind: Group
+  name: github:ci
+  apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
-  name: ci-helm-secrets
+  name: gha-monitoring-secrets
   apiGroup: rbac.authorization.k8s.io
